c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/case_outside_switch.c
int main(void) {
    for (int i = 0; i < 10; i = i + 1) {
        // case statements can only appear inside switch statements
        case 0: return 1;
    }
    return 9;
}